data/derived/sp14/progs/unify/prog3704.ml.out
Characters 289-292:
  | Times(expr, expr2) -> exprToString(expr)^"*"exprToString(expr2)
                                             ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
